# ReArk

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
cmake/: WriteBuildInfo.cmake
docs/: performance-loading-optimization.md  release-management.md  shctf-analysis-path.md
installer/: ReArk.iss
resources/translations/: reark_zh_CN.ts
samples/: shctf.app
src/: CMakeLists.txt
src/controller/: AgentController.cpp  AgentController.h  AgentRequestRouter.cpp  AgentRequestRouter.h  AgentSettings.cpp  AgentSettings.h  DecompilerController.cpp  DecompilerController.h  DeviceRuntimeController.cpp  DeviceRuntimeController.h  LanguageController.cpp  ProtectedSettingsSecret.cpp  ProtectedSettingsSecret.h  PythonRuntimeResolver.cpp  ReleaseNotesLocalizer.cpp  ReleaseNotesLocalizer.h  SettingsController.cpp  SettingsController.h  SigningController.cpp  SigningController.h  SigningSettings.cpp  SigningSettings.h  UpdateController.cpp  UpdateController.h
src/core/: AppInitializer.cpp  AppInitializer.h  BuildInfoProvider.cpp  BuildInfoProvider.h  CommandRunner.cpp  CommandRunner.h  HyleDecompiler.cpp  HyleDecompiler.h  Translator.cpp
src/device/: HarmonyPackageRewriter.cpp  HarmonyPackageRewriter.h  HdcDeviceBackend.cpp  HdcDeviceBackend.h  InstallablePackageResolver.cpp  InstallablePackageResolver.h  UiAutomationBackend.cpp  UiAutomationBackend.h
src/model/: AgentMessageModel.cpp  AgentMessageModel.h  DocumentContent.h  OpenFileTabsModel.cpp  OpenFileTabsModel.h  RecentFilesModel.cpp  RecentFilesModel.h  SourceTreeModel.cpp  SourceTreeModel.h
src/presentation/: CodeEditorItem.cpp  CodeEditorItem.h  MarkdownRenderer.cpp  MarkdownRenderer.h
src/signing/: HarmonyHapSigner.cpp  HarmonyHapSigner.h  SigningMaterialInspector.cpp  SigningMaterialInspector.h
src/tests/: AbcEvidenceDump.cpp  AgentPromptContractTest.cpp  AgentRequestRouterTest.cpp  AgentSettingsTest.cpp  CommandRunnerTest.cpp  DeviceRuntimeControllerTest.cpp  HarmonyHapSignerTest.cpp  HarmonyPackageRewriterTest.cpp  HdcDeviceBackendTest.cpp  HyleAbcEvidenceTest.cpp  InstallSamplesSmokeTest.cpp  ReleaseNotesLocalizerTest.cpp  RunInstallSamplesSmoke.ps1  UiAutomationBackendTest.cpp
src/ui/qml/: main.qml
src/ui/qml/ReArk/: AbcEvidenceDrawer.qml  AbcEvidenceWorkspace.qml  AbcStringsTable.qml  AboutWindow.qml  AppMenuBar.qml  CodeView.qml  CompactMenu.qml  DeviceRuntimeWorkspace.qml  FileTreeIcon.qml  Icon.qml  LicenseWindow.qml  MainWorkspace.qml  MarkdownMessage.qml  MarkdownTableBlock.qml  MediaView.qml  PackageFileIcon.qml  ReArkTextField.qml  RoundIconButton.qml  SettingsPage.qml  SettingsWindow.qml  SmartAnalysisPage.qml  StartPage.qml  UpdateWindow.qml  WindowTitleBar.qml  WindowTitleButton.qml
